refactor(draw-results): canonical draw_result + restclient + cache