@@ -6,9 +6,6 @@ import com.tchalanet.server.core.draw.application.port.out.ExternalDrawResultPor
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-import lombok.RequiredArgsConstructor;
 import org.springframework.batch.core.configuration.annotation.StepScope;
 import org.springframework.batch.core.job.parameters.JobParameters;
 import org.springframework.batch.infrastructure.item.ItemProcessor;
@@ -17,26 +14,34 @@ import org.springframework.stereotype.Component;
 
 @Component
 @StepScope
-@RequiredArgsConstructor
 public class FetchExternalResultProcessor implements ItemProcessor<DrawId, ApplyResultRow> {
 
   private final DrawReaderPort drawReaderPort;
   private final ExternalDrawResultPort externalDrawResultPort;
   private final ExternalResultsSlotCache slotCache;
 
-  @Value("#{jobParameters}")
-  private JobParameters jp;
+  private final JobParameters jp;
+
+  public FetchExternalResultProcessor(
+      DrawReaderPort drawReaderPort,
+      ExternalDrawResultPort externalDrawResultPort,
+      ExternalResultsSlotCache slotCache,
+      @Value("#{stepExecution.jobExecution.jobParameters}") JobParameters jp) {
+    this.drawReaderPort = drawReaderPort;
+    this.externalDrawResultPort = externalDrawResultPort;
+    this.slotCache = slotCache;
+    this.jp = jp;
+  }
 
   private List<String> parseCsvChannels() {
-    if (jp == null) return List.of();
-    var csv = jp.getString("channel_codes");
+    var csv = jp.getString("channel_codes"); // ex: "US_FL_NUM3_MID,US_FL_NUM3_EVE"
     if (csv == null || csv.isBlank()) return List.of();
+
     return Arrays.stream(csv.split(","))
-        .filter(Objects::nonNull)
-        .map(s -> s.trim().toUpperCase())
+        .map(s -> s == null ? "" : s.trim().toUpperCase())
         .filter(s -> !s.isBlank())
         .distinct()
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -45,27 +50,29 @@ public class FetchExternalResultProcessor implements ItemProcessor<DrawId, Apply
     if (drawOpt.isEmpty()) return null;
     var draw = drawOpt.get();
 
-    if (jp == null) return null; // defensive: job params must be present
-
     boolean force = "true".equalsIgnoreCase(jp.getString("force"));
     boolean dryRun = "true".equalsIgnoreCase(jp.getString("dry_run"));
-    int maxDraws = jp.getLong("max_draws") == null ? 200 : jp.getLong("max_draws").intValue();
+
+    Long maxDrawsL = jp.getLong("max_draws");
+    int maxDraws = maxDrawsL == null ? 200 : maxDrawsL.intValue();
 
     var drawDateStr = jp.getString("draw_date");
-    if (drawDateStr == null || drawDateStr.isBlank()) return null; // no date -> nothing to do
+    if (drawDateStr == null || drawDateStr.isBlank()) return null;
     var drawDate = LocalDate.parse(drawDateStr);
 
     var channelCodes = parseCsvChannels();
 
-    // 1) bulk fetch once / step
+    // 1) Bulk fetch ONCE per step execution
     if (!slotCache.isLoaded()) {
-      var query = new ExternalDrawResultPort.DrawExternalBulkQuery(channelCodes, drawDate, maxDraws, force, dryRun);
+      var query =
+          new ExternalDrawResultPort.DrawExternalBulkQuery(
+              channelCodes, drawDate, maxDraws, force, dryRun);
       var bulk = externalDrawResultPort.fetchExternalResults(query);
       if (bulk != null) slotCache.putAll(bulk);
       slotCache.markLoaded();
     }
 
-    // 2) pick result by draw channel
+    // 2) Pick for current draw
     var res = slotCache.get(draw.drawChannel().code());
     if (res == null || !res.found()) return null;
 
